Update create block api to store block in blocks collection
